# Undergrad-Code-Collection

./: README.md
COMP 201 Software Engineering I /Check-Fire-and-Burglary-main/: README.md  coopesabc  feedback.text
COMP 219 Advanced Artificial Intelligence /Resilience-to-Adversarial-Attack-main/: 1020.pt  201676262.pt  Competition.py  Mark.py  README.md  ep0.05num30epoch10.pt  ep0.05num30epoch70.pt  ep0.06num30epoch10.pt  ep0.06num30epoch100batch16_16.pt  ep0.06num30epoch10batch16_32.pt  ep0.06num30epoch10batch256.pt  ep0.06num30epoch10batch32_64.pt  main.py  test.pt  test.py
COMP 281 Principles of C and Memory Management /Turing-Machine-main/: CMakeLists.txt  DenseTuringMachine.cpp  DenseTuringMachine.h  Main.cpp  Menu.cpp  MenuSystem.cpp  README.md  SparseTuringMachine.cpp  SparseTuringMachine.h  TuringMachine.h  TuringMachineState.cpp  TuringMachineState.h  TuringTape.cpp  TuringTape.h
COMP 315 Cloud Computing For E-Commerce /COMP315-CW1-main/: Data_Processing.js  LICENSE  README.md
COMP 336 Big Data Analytics /COMP336-CW1-main/: PART-1.py  PySpark_CW_Main.ipynb  PySpark_Q1_F.ipynb  Q1-6_all_solutions.py  README.md  all_solutions.py
COMP 336 Big Data Analytics /COMP336-CW2-main/: README.md  main.py
COMP 337 Data Mining and Visualisation /COMP337-CW2-main/: BisectingKMeans.py  KMeans.py  KMeansSynthetic.py  KMeansplusplus.py  README.md
COMP 338 Computer Vision /COMP338-CW1-main/: Experiment_1.py  Experiment_2.py  Experiment_3.py  Experiment_4.py  README.md  Task1.py  Task2.1.py  Task2.2.py  Task2_Benchmark.py
(+78 files in other folders)
